syntax = "proto3";

import "result.proto";

package gameProto;

message ServerInfo
{
    string IP = 1;
    int32 Port = 2;
}

message PingACK 
{
	//
}

message LoginREQ 
{
    string Version = 1;
	string Platform = 2;
	string UID = 3;
}

message LoginACK 
{
	ResultCode Result = 1;
	ServerInfo Server = 2;
	string GameToken = 3;
	string GameSvcID = 4; // 选中的一台game服务器ID
}

message VerifyREQ 
{
	string GameToken = 1;
	string GameSvcID = 2;
}

message VerifyACK 
{
	ResultCode Result = 1;
}